Use rollup to create nomodule bundle.

--- a/static/index.html
+++ b/static/index.html
@@ -29,5 +29,6 @@
       <x-pad class="mpc__pad" key="v" sample="tom"> tom </x-pad>
     </x-mpc>
     <script src="js/app.js" type="module"></script>
+    <script src="js/app.js" nomodule></script>
   </body>
 </html>
