Add webcomponents polyfill, fix missing event bug.

--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,8 @@
       <x-pad class="mpc__pad" key="c" sample="kick"> kick </x-pad>
       <x-pad class="mpc__pad" key="v" sample="tom"> tom </x-pad>
     </x-mpc>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-lite.js"></script>
     <script src="js/app.js" type="module"></script>
-    <script src="js/app.js" nomodule></script>
+    <script src="js/bundle.js" nomodule></script>
   </body>
 </html>
