--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <title> Web Audio MPC </title>
     <link href="css/app.css" rel="stylesheet">
   </head>
